--- a/app/sidebar/sidebar.component.html
+++ b/app/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
                 <div class="logo-img">
                     <img src="/assets/img/angular2-logo-white.png"/>
                 </div>
-                Creative Tim
+                Project Ruha
             </a>
         </div>
         <ul class="nav">
