--- a/app/dashboard/home/home.component.html
+++ b/app/dashboard/home/home.component.html
@@ -71,8 +71,8 @@
             <div class="col-md-6">
                 <div class="card" [@cardtasks]>
                     <div class="header">
-                        <h4 class="title">Tasks</h4>
-                        <p class="category">Backend development</p>
+                        <h4 class="title">Server Tasks</h4>
+                        <p class="category">Backend managements</p>
                     </div>
                     <div class="content">
                         <div class="table-full-width">
@@ -80,11 +80,12 @@
                                 <tbody>
                                     <tr>
                                         <td>
-                                            <label class="checkbox">
-                                                <input type="checkbox" value="" data-toggle="checkbox">
+                                            <label class="radio">
+                                                <!--<input type="checkbox" value="" data-toggle="checkbox">-->
+                                                <input #male name="gender" type="radio" value="development" (click)="setDevProd(0)" />
                                             </label>
                                         </td>
-                                        <td>Sign contract for "What are conference organizers afraid of?"</td>
+                                        <td>Turn development push notification</td>
                                         <td class="td-actions text-right">
                                             <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-xs">
                                                 <i class="fa fa-edit"></i>
@@ -96,11 +97,12 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            <label class="checkbox">
-                                                <input type="checkbox" value="" data-toggle="checkbox" checked="">
+                                            <label class="radio">
+                                                <!--<input type="checkbox" value="" data-toggle="checkbox" [checked]="displayValue" (click)="setDisplayValue($event.target.checked)">-->
+                                                <input #female name="gender" type="radio"  value="production" (click)="setDevProd(1)" />
                                             </label>
                                         </td>
-                                        <td>Lines From Great Russian Literature? Or E-mails From My Boss?</td>
+                                        <td>Turn production push notification</td>
                                         <td class="td-actions text-right">
                                             <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-xs">
                                                 <i class="fa fa-edit"></i>
