--- a/app/dashboard/table/table.component.html
+++ b/app/dashboard/table/table.component.html
@@ -4,25 +4,34 @@
             <div class="col-md-12">
                 <div class="card" [@cardtable1]>
                     <div class="header">
-                        <h4 class="title">Striped Table with Hover</h4>
-                        <p class="category">Here is a subtitle for this table</p>
+                        <h4 class="title">Registerd device list</h4>
+                        <p class="category">check the push notification token and device name</p>
                     </div>
                     <div class="content table-responsive table-full-width">
                         <table class="table table-hover table-striped">
                             <thead>
                                 <tr>
-                                    <th>ID</th>
-                                    <th>Name</th>
-                                    <th>Salary</th>
-                                    <th>Country</th>
-                                    <th>City</th>
+                                    <th>Address</th>
+                                    <th>CameraName</th>
+                                    <th>StartTime</th>
+                                    <th>EndTime</th>
+                                    <th>Status</th>
+                                    <th>Token</th>
                                 </tr>
+                            </thead>
                             <tbody>
+                                <!--<div class="table-cmp">-->
+                                    <!--<device-list
+                                        [deviceList]="devices"
+                                        (onDeviceSelected)="deviceWasSelected($event)">
+                                    </device-list>-->
+                                <!--</div>-->
                                 <tr>
                                     <td>1</td>
                                     <td>Dakota Rice</td>
                                     <td>$36,738</td>
                                     <td>Niger</td>
+                                    <td>Oud-Turnhout</td>
                                     <td>Oud-Turnhout</td>
                                 </tr>
                                 <tr>
@@ -31,42 +40,16 @@
                                     <td>$23,789</td>
                                     <td>Curaçao</td>
                                     <td>Sinaai-Waas</td>
+                                    <td>Oud-Turnhout</td>
                                 </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Sage Rodriguez</td>
-                                    <td>$56,142</td>
-                                    <td>Netherlands</td>
-                                    <td>Baileux</td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>Philip Chaney</td>
-                                    <td>$38,735</td>
-                                    <td>Korea, South</td>
-                                    <td>Overland Park</td>
-                                </tr>
-                                <tr>
-                                    <td>5</td>
-                                    <td>Doris Greene</td>
-                                    <td>$63,542</td>
-                                    <td>Malawi</td>
-                                    <td>Feldkirchen in Kärnten</td>
-                                </tr>
-                                <tr>
-                                    <td>6</td>
-                                    <td>Mason Porter</td>
-                                    <td>$78,615</td>
-                                    <td>Chile</td>
-                                    <td>Gloucester</td>
-                                </tr>
+                                
                             </tbody>
                         </table>
 
                     </div>
                 </div>
             </div>
-            <div class="col-md-12">
+            <!--<div class="col-md-12">
                 <div class="card card-plain" [@cardtable2]>
                     <div class="header">
                         <h4 class="title">Table on Plain Background</h4>
@@ -130,7 +113,7 @@
                         </table>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
